Bug 351862 - Transformation preview for vector layers is buggy
Summary: Transformation preview for vector layers is buggy
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Transform (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-08-27 15:17 UTC by jmf
Modified: 2018-09-24 15:56 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Video example (600.72 KB, video/mp4)
2015-08-28 07:00 UTC, mvowada
Details

Note You need to log in before you can comment on or make changes to this bug.
Description jmf 2015-08-27 15:17:57 UTC
When transforming a vector layer, like scaling up or down and then trying to transform again, the preview of the transformed image isn't right.

Reproducible: Always

Steps to Reproduce:
1. Create a vector layer and draw something on it
2. Scale it up/down or perspective transform it with the transform tool.
3. After confirming the transform, transform again

Actual Results:  
The preview shows the image before the first transform. Transforming properly becomes impossible.

Expected Results:  
The preview should show the image after the first transform, so scaling preview actually shows the end result.
Comment 1 mvowada 2015-08-28 07:00:47 UTC
Created attachment 94254 [details]
Video example

Hi. I think I can confirm, it happens with vector layers specifically, as you've said.
Please, could you check the attached video (1min., sorry) and tell if it illustrates the bug you described?
Thank you
Comment 2 jmf 2015-09-10 09:59:56 UTC
Yes, that's the bug that I mean. 
Thanks for the video.
Comment 3 Halla Rempt 2015-09-12 09:34:06 UTC
Yes -- there are more issues, though, saving a transformed vector layer also doesn't work.
Comment 4 Dmitry Kazakov 2018-02-07 19:12:38 UTC
The issue is partially solved now, at least the preview coincides with the final result now. Though the tool still doesn't hide the original (untransformed) shapes.
Comment 5 Dmitry Kazakov 2018-09-24 15:56:01 UTC
Git commit 0fff09f1e7e50c6bae53e798e5ec886ae8a2545b by Dmitry Kazakov.
Committed on 24/09/2018 at 15:39.
Pushed by dkazakov into branch 'master'.

Fix hiding shape layers when trying to transforming them

M  +12   -0    libs/image/kis_projection_leaf.cpp
M  +17   -0    libs/image/kis_projection_leaf.h
M  +13   -1    plugins/tools/tool_transform2/strokes/transform_stroke_strategy.cpp
M  +1    -0    plugins/tools/tool_transform2/strokes/transform_stroke_strategy.h

https://commits.kde.org/krita/0fff09f1e7e50c6bae53e798e5ec886ae8a2545b