Fix hiding shape layers when trying to transforming them

BUG:351862